--- a/index.html
+++ b/index.html
@@ -3,6 +3,43 @@
     <title>Hello World</title>
   </head>
   <body>
+    <script src="./jscript/vue.js"></script>
+    <script>
+      window.onload = function() {
+        // }
+
+        var app = new Vue({
+          el: '#app',
+          data: {
+            message: 'Hello Vue!'
+          }
+        })
+        var app2 = new Vue({
+          el: '#app-2',
+          data: {
+            message: '页面加载于 ' + new Date().toLocaleString()
+          }
+        })
+        var app3 = new Vue({
+          el: '@app-3',
+          data: {
+            seen: true
+          }
+        })
+        alert('元素已经加载完毕 !')
+      }
+    </script>
     <h1>VUE TEST !!!</h1>
+    <div id="app">
+      {{ message }}
+    </div>
+    <div id="app-2">
+      <span v-bind:title="message ">
+        鼠标悬停几秒钟查看此处动态绑定的提示信息！
+      </span>
+    </div>
+    <div id="app-3">
+      <p v-if="seen" onclick="">现在你看到我了</p>
+    </div>
   </body>
 </html>
