--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         var app3 = new Vue({
           el: '@app-3',
           data: {
-            seen: true
+            seen: false
           }
         })
         alert('元素已经加载完毕 !')
