--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           }
         })
         var app3 = new Vue({
-          el: '@app-3',
+          el: '#app-3',
           data: {
             seen: false
           }
@@ -39,7 +39,7 @@
       </span>
     </div>
     <div id="app-3">
-      <p v-if="seen" onclick="">现在你看到我了</p>
+      <p v-if="seen">现在你看到我了</p>
     </div>
   </body>
 </html>
