--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             seen: false
           }
         })
-        alert('元素已经加载完毕 !')
+        alert('元素已经加载完毕 , 测试 !')
       }
     </script>
     <h1>VUE TEST !!!</h1>
