--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       window.onload = function() {
         // }
 
-        var app = new Vue({
+        var app1 = new Vue({
           el: '#app',
           data: {
             message: 'Hello Vue!'
@@ -23,7 +23,7 @@
         var app3 = new Vue({
           el: '#app-3',
           data: {
-            seen: false
+            seen: ture
           }
         })
         alert('元素已经加载完毕 , 测试 !')
