--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       window.onload = function() {
         // }
 
-        var app = new Vue({
+        var app18 = new Vue({
           el: '#app',
           data: {
             message: 'Hello Vue!'
