--- a/index.html
+++ b/index.html
@@ -5,86 +5,83 @@
   <body>
     <script src="./jscript/vue.js"></script>
     <script>
-            window.onload = function() {
-              // }
+      window.onload = function() {
+        // }
 
-              var app18 = new Vue({
-                el: '#app',
-                data: {
-                  message: 'Hello Vue!'
-                },
-                created: function() {
-                  // `this` 指向 vm 实例
-                  console.log('a is: ' + this.message)
-                }
-              })
-              var app2 = new Vue({
-                el: '#app-2',
-                data: {
-                  message: '页面加载于 ' + new Date().toLocaleString()
-                }
-              })
-              var app3 = new Vue({
-                el: '#app-3',
-                data: {
-                  seen: true
-                }
-              })
-      <<<<<<< HEAD
-              var app4 = new Vue({
-                el: '#app-4',
-                data: {
-                  todos: [
-                    { text: '学习 JavaScript' },
-                    { text: '学习 Vue' },
-                    { text: '整个牛项目' }
-                  ]
-                }
-              })
-              var app5 = new Vue({
-                el: '#app-5',
-                data: {
-                  message: 'Hello vue-5'
-                },
-                methods: {
-                  reverseMessage: function() {
-                    this.message = this.message
-                      .split('')
-                      .reverse()
-                      .join('')
-                  }
-                }
-              })
-              var app6 = new Vue({
-                el: '#app-6',
-                data: {
-                  message: ''
-                }
-              })
-              // Vue.component('todo-item', {
-              //   props: ['todo'],
-              //   template: '<li>{{ todo.text }}</li>'
-              // })
-
-              Vue.component('todo-item', {
-                // todo-item 组件现在接受一个
-                // "prop"，类似于一个自定义特性。
-                // 这个 prop 名为 todo。
-                props: ['todo'],
-                template: '<li>{{ todo.text }}</li>'
-              })
-
-              var app7 = new Vue({
-                el: '#app-7',
-                data: {
-                  myList: [{ id: 0, text: 'kk1' }, { id: 1, text: 'kk2' }]
-                }
-              })
-
-      =======
-      >>>>>>> cb6670ccb9f8166826828a46eb030d49e5b712b0
-              alert('元素已经加载完毕 , 测试 !')
+        var app18 = new Vue({
+          el: '#app',
+          data: {
+            message: 'Hello Vue!'
+          },
+          created: function() {
+            // `this` 指向 vm 实例
+            console.log('a is: ' + this.message)
+          }
+        })
+        var app2 = new Vue({
+          el: '#app-2',
+          data: {
+            message: '页面加载于 ' + new Date().toLocaleString()
+          }
+        })
+        var app3 = new Vue({
+          el: '#app-3',
+          data: {
+            seen: true
+          }
+        })
+        var app4 = new Vue({
+          el: '#app-4',
+          data: {
+            todos: [
+              { text: '学习 JavaScript' },
+              { text: '学习 Vue' },
+              { text: '整个牛项目' }
+            ]
+          }
+        })
+        var app5 = new Vue({
+          el: '#app-5',
+          data: {
+            message: 'Hello vue-5'
+          },
+          methods: {
+            reverseMessage: function() {
+              this.message = this.message
+                .split('')
+                .reverse()
+                .join('')
             }
+          }
+        })
+        var app6 = new Vue({
+          el: '#app-6',
+          data: {
+            message: ''
+          }
+        })
+
+        Vue.component('todo-item', {
+          // todo-item 组件现在接受一个
+          // "prop"，类似于一个自定义特性。
+          // 这个 prop 名为 todo。
+          props: ['todo'],
+          template: '<li>{{ todo.text }}</li>'
+        })
+
+        var app7 = new Vue({
+          el: '#app-7',
+          data: {
+            myList: [
+              { id: 0, text: 'kk1' },
+              { id: 1, text: 'kk2' },
+              { id: 2, text: 'kk3' }
+            ]
+          }
+        })
+
+        alert('元素已经加载完毕 , 测试 !')
+      }
     </script>
     <h1>VUE TEST !!!</h1>
     <div id="app">
