--- a/index.html
+++ b/index.html
@@ -80,7 +80,15 @@
           }
         })
 
+        var data1 = { text: 'app8' }
+        var app8 = new Vue({
+          el: '#app-8',
+          data: data1
+        })
+
         alert('元素已经加载完毕 , 测试 !')
+        app8.text = 'app8 new!!!'
+        console.log(data1.text)
       }
     </script>
     <h1>VUE TEST !!!</h1>
@@ -117,5 +125,6 @@
         </todo-item>
       </ol>
     </div>
+    <div id="app-8">{{ text }}</div>
   </body>
 </html>
