--- a/index.html
+++ b/index.html
@@ -83,12 +83,15 @@
         var data1 = { text: 'app8' }
         var app8 = new Vue({
           el: '#app-8',
+          props: ['todo'],
           data: data1
         })
 
         alert('元素已经加载完毕 , 测试 !')
         app8.text = 'app8 new!!!'
         console.log(data1.text)
+        data1.text = 'This is a text !!! '
+        console.log(app8.text)
       }
     </script>
     <h1>VUE TEST !!!</h1>
