--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
         },
         created: function() {
           // `this` 指向 vm 实例
-          console.log('a is: ' + this.message)
+          console.log('a is: ' + this.message) 
+          console.log('hille')
         }
       })
       var app2 = new Vue({
