--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
         -
       </button>
     </div>
+    <div id='app-11' >
+      <div v-bind:title="message">
+        {{message}}
 
+      </div>
+    </div> 
     <script>
       var app18 = new Vue({
         el: '#app',
@@ -148,6 +153,15 @@
           }
         }
       })
+
+      const app11 = new Vue({
+        el:'#app-11',
+        data:{
+          message:'你好！'
+        }
+      })
+
+
 
       alert('元素已经加载完毕 , 测试 !')
       app8.text = 'app8 new!!!'
