--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
     <title>Hello World</title>
   </head>
   <body>
+
     <script src="./jscript/vue.js"></script>
+
+<style>
+[v-cloak] {
+  display:none
+}
+
+</style>
 
     <h1>VUE TEST !!!</h1>
     <div id="app-9">{{ message }}</div>
@@ -54,6 +62,16 @@
 
       </div>
     </div> 
+
+    <div id='app-12'>
+      <h2>{{message}}</h2>
+      <h3 v-once>{{message}}</h3>
+      <h3 v-cloak  v-text='url'></h3>
+    </div>
+
+
+
+
     <script>
       var app18 = new Vue({
         el: '#app',
@@ -161,7 +179,14 @@
         }
       })
 
-
+let app12 = new Vue({
+  el:'#app-12',
+  data:{
+    message:'wangxy',
+    url:'<a href="#" >pointer</a>'
+    // url:'ws'
+  }
+})
 
       alert('元素已经加载完毕 , 测试 !')
       app8.text = 'app8 new!!!'
