--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ let app19 = new Vue({
 
 })
 
-alert('元素已经加载完毕 , 测试 !')
+alert('元素已经加载完毕 , 测试 ！！!')
     
       app8.text = 'app8 new!!!'
       console.log(data1.text)
