--- a/index.html
+++ b/index.html
@@ -154,8 +154,24 @@
 
 </div>
   
+<div id='app-20'>
+  <input type='text' v-model='message'>
+  {{message}}
+</div>
 
+<DIV id='app-21'>
+  <input type='radio' id='male' name='sex' value='男' v-model='sex'>男
+  <input type='radio' id='female' name='sex' value='女' v-model='sex'>女
+  <h2>{{sex}}</h2>
+</DIV>
 
+<div id='app-22'>
+<label for=''> 
+  <input type='checkbox' id='check' v-model='isAgree' >同意协议
+  <button :disabled='!isAgree' >下一步</button>
+
+</label>
+</div>
     <script>
       var app18 = new Vue({
         el: '#app',
@@ -174,7 +190,7 @@
           message: '页面加载于 ' + new Date().toLocaleString()
         }
       })
-      var app3 = new Vue({
+      var app3 = new  Vue({
         el: '#app-3',
         data: {
           seen: true
@@ -434,6 +450,33 @@ let app19 = new Vue({
   }
 
 })
+
+
+let app20 = new Vue({
+  el:'#app-20',
+  data:{
+    message:''
+  }
+})
+
+let app21=new Vue({
+  el:'#app-21',
+  data:{
+    sex:''
+  }
+
+})
+
+let app22= new Vue({
+  el:'#app-22',
+  data:{
+    isAgree :false
+  }
+ 
+  }
+
+
+)
 
 alert('元素已经加载完毕 , 测试 ！！!')
     
