--- a/index.html
+++ b/index.html
@@ -172,6 +172,31 @@
 
 </label>
 </div>
+
+<div id='app-23'>
+
+<input type='checkbox' value='足球' v-model='hobit'>足球
+<input type='checkbox' value='篮球' v-model='hobit'>篮球
+<input type='checkbox' value='兵乓球' v-model='hobit'>乒乓球
+<input type='checkbox' value='拳击' v-model='hobit'>拳击
+
+
+
+
+<div>{{hobit}}</div>
+</div>
+
+<div id='app-24'>
+  <select name='aaa' v-model='fav'>
+    <option value='苹果' >苹果</option>
+    <option value='香蕉' >香蕉</option>
+    <option value='梨' >梨</option>
+    <option value='榴莲' >榴莲</option>
+  </select>
+  <h2>你选择的水果：{{fav}}</h2>
+</div>
+
+
     <script>
       var app18 = new Vue({
         el: '#app',
@@ -477,6 +502,21 @@ let app22= new Vue({
 
 
 )
+
+let app23 = new Vue({
+el:'#app-23',
+data:{
+  hobit:[]
+}
+})
+
+let app24 = new Vue({
+  el:'#app-24',
+  data:{
+    fav:''
+  }
+})
+
 
 alert('元素已经加载完毕 , 测试 ！！!')
     
