--- a/component_example.html
+++ b/component_example.html
@@ -40,7 +40,7 @@
         const cpn2 = Vue.extend({
 
             template:`<div>
-                <h2>This is second </h2>
+                <h2>This is second , wangxy</h2>
                 <c1></c1>
                 </div>
                 
