--- a/ES6-MODEL.html
+++ b/ES6-MODEL.html
@@ -12,8 +12,8 @@
             <!-- <script src='mm.js' type='module'></script> -->
 
  <script >
- console.log(sum(1,2));
- 
+//  console.log(sum(1,2));
+ console.log( 'hello')
  </script>
     </body>
 </html>
